--- a/personal-site/Content/css/_home.scss
+++ b/personal-site/Content/css/_home.scss
@@ -251,4 +251,9 @@
         top: 50%;
         transform: translate(-50%, -50%);
     }
+
+    #scroll-bottom-btn
+    {
+        display:none;
+    }
 }
